--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  height: 80vh;
+  padding: 0 20px;
 }
 
 .home-left {
@@ -16,15 +17,7 @@
 
 .home-right {
   max-width: 50%;
-}
-
-.animation-placeholder {
-  width: 100%;
-  height: 300px;
-  background-color: #e0e0e0;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
-  color: #888;
 }
